# Adobe-India-Hackathon25-Challenge1a

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/models/: documents.py
app/services/: heading_detector.py
output/: file01.json  file02.json  file03.json  file04.json  file05.json
