[project]
name = "pdf-intelligence-service"
version = "1.0.0"
description = "Adobe Hackathon - Challenge 1A Submission"
authors = [
    {name = "nemeziz1010",email = "mitukorochikar10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
